traducciones en inglés

--- a/app/translations/en/LC_MESSAGES/messages.po
+++ b/app/translations/en/LC_MESSAGES/messages.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2025-08-30 21:20-0500\n"
+"POT-Creation-Date: 2025-08-31 12:24-0500\n"
 "PO-Revision-Date: 2025-08-30 20:36-0500\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -17,11 +17,19 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
+#: app/blueprints/alumnos.py:16
+msgid "Ocurrió un error al intentar consultar los alumnos"
+msgstr "An error occurred while trying to query the students"
+
+#: app/templates/alumnos/home.html:9
+msgid "Home | Alumnos"
+msgstr "Student Management"
+
 #: app/templates/alumnos/home.html:19
 msgid "Gestión de Alumnos"
 msgstr "Student Management"
 
-#: app/templates/alumnos/home.html:21
+#: app/templates/alumnos/home.html:21 app/templates/alumnos/registrar.html:26
 msgid "Registrar Alumno"
 msgstr "Add Student"
 
@@ -55,3 +63,10 @@ msgstr "If you see this modal, your Bootstrap's JS is working properly 🎉"
 msgid "Cerrar"
 msgstr "Close"
 
+#: app/templates/alumnos/registrar.html:10
+msgid "Registrar | Alumno"
+msgstr "Add Student"
+
+#: app/templates/alumnos/registrar.html:18
+msgid "Volver"
+msgstr "Go Back"
